# Think41_assesment

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/app/: app.py  crud.py  database.py  init_db.py  llm_chain.py  load_data.py  models.py  schemas.py
frontend/public/: index.html
frontend/src/: App.jsx  index.js
frontend/src/components/: ChatWindow.jsx  ConversationList.jsx  Message.jsx  MessageList.jsx  UserInput.jsx
frontend/src/context/: ChatContext.jsx
frontend/src/styles/: App.css  ChatWindow.css  ConversationList.css  Message.css  MessageList.css  UserInput.css
